# L-TChen.github.io

./: .gitignore  .gitmodules  .travis.yml  L-TChen-github-io.cabal  README.md  cabal.project.freeze  cv.html  index.html  package-lock.json  package.json  posts.html  publications.md  site.hs  stack.yaml
.github/workflows/: hakyll.yml  haskell.yml
2024-04-10-BiSig/assets/: header.jsonp
2024-04-10-BiSig/assets/000E6C9B-02D0-4BD5-A479-0EB7339EB837/: 000E6C9B-02D0-4BD5-A479-0EB7339EB837.json
2024-04-10-BiSig/assets/07969B2E-34E7-48E7-8111-AC125367144B/: 07969B2E-34E7-48E7-8111-AC125367144B.json  07969B2E-34E7-48E7-8111-AC125367144B.jsonp
2024-04-10-BiSig/assets/12F87B27-0819-4D3C-ACDE-129C016A9204/: 12F87B27-0819-4D3C-ACDE-129C016A9204.json
2024-04-10-BiSig/assets/173A62BE-A1F0-4708-98B5-C2DC21F0B156/: 173A62BE-A1F0-4708-98B5-C2DC21F0B156.json  173A62BE-A1F0-4708-98B5-C2DC21F0B156.jsonp
2024-04-10-BiSig/assets/1B1C88BD-32E8-44E8-BB11-E17BCD686FAD/: 1B1C88BD-32E8-44E8-BB11-E17BCD686FAD.json  1B1C88BD-32E8-44E8-BB11-E17BCD686FAD.jsonp
assets/bib/: published.bib
assets/csl/: elsevier-with-titles.csl
assets/css/: default.css
assets/scss/: default.scss
bib/: published.bib
content/: cv.md  index.html  index.md
content/posts/: 2019-08-25-opening.md  2023-03-10-markdown.md  2023-03-10-中文.md
content/posts/2023/: 03-10-markdown.md  03-10-中文.md  2023-03-10-markdown.md
css/: default.css
posts/: 2019-08-25-opening.markdown
src/: site.hs
templates/: default.html  footer.html  head.html  navbar.html  post.html  post.tex  posts.html
(+133 files in other folders)
