name:               L-TChen-github-io
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  hs-source-dirs:   src
  build-depends:    base == 4.*
                  , hakyll == 4.15.*
                  , pandoc >= 2.11 && < 2.20
                  , filepath >=1.0 && <1.5
                  , time >=1.8 && <1.12
  ghc-options:      -threaded
  default-language: Haskell2010
-- other-modules:    BibCompiler
