name:               L-TChen-github-io
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  hs-source-dirs:   src
  build-depends:    base == 4.*
                  , hakyll < 4.17
                  , filepath >=1.0 && <1.5
                  , pandoc >= 2.11 && < 4
                  , time >=1.8 && <1.13
  ghc-options:      -threaded
  default-language: Haskell2010
